# procpoolpp

./: CMakeLists.txt  README.md
cmake/: procpoolppConfig.cmake.in
examples/: CMakeLists.txt  sync_commit.cpp
include/procpoolpp/: process.hpp  process_executor.hpp  process_pool.hpp
